--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,11 @@ body {
     
 }
 
+.test{
+    background-image: url(../assets/images/header-img.png);
+    background-position: center;
+}
+
 .header__img{
     background-image: url(../assets/images/header-img.png);
     background-position: center;
