--- a/css/index.css
+++ b/css/index.css
@@ -390,41 +390,50 @@ h4{
 
 .story{
     display:flex;
+    justify-content: center;
     border: solid 1px;
     margin: 120px 0px 150px 0;
     border:solid 1px;
 }
 .story__inner{
     border:1px solid black;
-    width: 50%;
+    border: 1px solid black;
+    /* width: 50%; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 205px;
+    width: 520px;
 }
 .story__title{
     
-    padding-left:300px;
+    
     font-size: 50px;
     text-align: start;
     border:solid 1px;
 }
 .story__text{
     
-    padding: 50px 155px 50px 300px;
+    
     text-align: start;
     font-size: 18px;
     border:solid 1px;
     text-align: left;
     line-height: 1.94;
+
 }
 
 .story__icon{
-margin-left: 20px;
+
+position: relative;
+
 }
 
 
 .story__btn-wrapper{
-   
     height: 60px;
     border:2px solid black;
-    padding-left: 300px;
+    margin-top: 57px;
 }
 .story__btn-green{
     
@@ -432,13 +441,23 @@ margin-left: 20px;
     border:1px solid;
     width: 302px;
     height: 60px;
-   color:white;
-   
+    color:white;
     border-radius: 35px;
 }
 
-.story__img{
+.story__img::before{
+    content: "";
     border:solid 1px;
+    margin-right: 280px;
+    content: "";
+    width: 290px;
+    height: 216px;
+    background-size:cover;
+    position: absolute;
+    background-image: url(/assets/images/Stamp-sunny-text.png);
+    z-index: 55;
+    right: 476px;
+    
 }
 
 .testimonials{
@@ -448,7 +467,30 @@ margin-left: 20px;
     display:flex;
     flex-direction: column;
     align-items:center;
+    position: relative;
 }
+
+.testimonials::before{
+    content:"";
+    width: 764px;
+    height: 150px;
+    background-image: url(/assets/images/sarah-a-png.png);
+    top: 124px;
+    left: 425px;
+    position: absolute;
+}
+
+.testimonials::after{
+    content:"";
+    width: 410px;
+    height: 300px;
+    background-image: url(/assets/images/Dots-img.png);
+    position: absolute;
+    top: -74px;
+    right: 45px;
+
+}
+
 
 .testimonials__title{
   font-family:Muli-ExtraBold;
@@ -460,6 +502,7 @@ margin-left: 20px;
     display: flex;
     justify-content: center;
     margin:100px 0 70px 0;
+    z-index: 3;
 }
 
 .testimonials__text{
@@ -532,6 +575,21 @@ margin-left: 20px;
 .blog__inner{
     border:solid 1px;
     display: flex;
+    position: relative;
+
+}
+
+
+.blog__inner::before{
+    content: "";
+    display: inline-block;
+    background-image: url(/assets/images/long-line-orange-png.png);
+    position: absolute;
+    z-index: -777;
+    width: 650px;
+    height: 10px;
+    top:60px;
+    left: 518px;
 }
 
 .blog__title{
@@ -546,7 +604,9 @@ margin-left: 20px;
     flex-direction: column;
     justify-content: center;
     margin-left: 60px;
+ 
 }
+
 
 .blog__img{
     border:solid 1px;
@@ -624,9 +684,13 @@ margin-left: 20px;
 
 .footer__holder{
     border:solid 1px;
-    
-    
-    
+    background-color:#6c2c1c;
+    color: #af8a82;
+}
+
+.footer__icon{
+    color:white;
+
 }
 
 .footer__link{
@@ -643,7 +707,8 @@ margin-left: 20px;
 }
 
 .footer__sub-title{
-    color: #6d450c;
+    display: flex;
+    justify-content: center;
 }
 
 .footer__form-input{
