--- a/css/index.css
+++ b/css/index.css
@@ -82,7 +82,7 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 90px 0 110px;
-    border: 1px solid;
+    /* border: 1px solid; */
     
 }
 .header-content{
@@ -107,7 +107,7 @@ button {
 }
 
 .header__icon{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     color: red;
 }
 
@@ -119,7 +119,7 @@ button {
 }
 
 .menu {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     align-items: center;
     padding-left: 30px; 
@@ -130,7 +130,7 @@ button {
     margin-right: 35px;
 }
 .menu__link {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     color: #fdfcfc;
 }
 
@@ -141,7 +141,7 @@ button {
 }
 
 .personal{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     flex-direction: row;
     justify-content:space-between;
@@ -178,7 +178,7 @@ button {
     
 }
 .social__list{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     list-style: none;
     display:flex;
     
@@ -741,8 +741,7 @@ position: relative;
     -o-border-radius:30px;
 }
 
-
- /* @media(max-width:1170px){
+@media(max-width:1170px){
     .header__navigation {
         display: none;
     }
@@ -752,15 +751,16 @@ position: relative;
     .header__content {
         padding-top:200px;
     } 
-}  */
+} 
 
 @media (max-width: 768px) {
     .header__navigation {
+        display: flex;
         background-color:#0aa566;
         position: fixed;
         top:0;
-        right: 0;
-        left: 0;
+        right: 100px;
+        left: 0px;
         bottom: 0;
         z-index: 55555555;
         padding: 0;
@@ -773,12 +773,14 @@ position: relative;
     .menu__list{
         display:flex;
         flex-direction: column;
+        margin-top: 25px;
         
     }
     .menu__item{
         height: 40px;
-        margin-top: 30px;
-        margin-right: 0;
+        margin-top: 23px;
+    
+        font-size: 25px;
     }
     .header__burgher-btn {
         display: block;
@@ -786,6 +788,35 @@ position: relative;
     .header__content {
         padding-top:200px;
     }
+    
+}
+@media (max-width: 460px) {
+    .header__navigation {
+        display: flex;
+        background-color:#0aa566;
+        position: fixed;
+        top:0;
+        right: 0px;
+        left: 0px;
+        bottom: 0;
+        z-index: 55555555;
+        padding: 0;
+        margin: 0;
+        flex-direction: column-reverse;
+        justify-content: flex-end;
+        align-items: center;
+        padding:100px;
+}
+.container__details{
+    flex-direction: column;
+    
+}
+.header__icon{
+    display: none;
+}
+.social{
+    margin-top: 24px;
+    margin-left: 20px;
 }
 
 
