--- a/styles/less/blocks/personal.less
+++ b/styles/less/blocks/personal.less
@@ -1,4 +1,5 @@
-// main: ./main.less
+// main: ../main.less
+
 
 .personal__container{
     display: flex;
@@ -23,3 +24,6 @@
 .personal__icon-search{
     margin-left: 35px;
 }
+
+
+
