--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -1,7 +1,12 @@
-// out: ./css/main.min.css, compress: true, sourceMap: true
+// out: ../css/main.min.css, compress: true, sourceMap: true
   
   
-  
+
+
+
+
+
+
 @font-face {
     font-family: "MuliRegular";
     src: url("/assets/fonts/Muli-Regular.woff");
@@ -59,6 +64,21 @@ h4{
     color: #f2612d;
 }
 
+@import "./blocks/about.less";
+@import "./blocks/blog.less";
+@import "./blocks/btnButton.less";
+@import "./blocks/footer.less";
+@import "./blocks/header.less";
+@import "./blocks/instagram.less";
+@import "./blocks/logo.less";
+@import "./blocks/media.less";
+@import "./blocks/menu.less";
+@import "./blocks/personal.less";
+@import "./blocks/productsProduct.less";
+@import "./blocks/smoothies.less";
+@import "./blocks/social.less";
+@import "./blocks/story.less";
+@import "./blocks/testimonials.less";
 
 
 
