added work in block about.less

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -64,21 +64,22 @@ h4{
     color: #f2612d;
 }
 
-@import "./blocks/about.less";
-@import "./blocks/blog.less";
-@import "./blocks/btnButton.less";
-@import "./blocks/footer.less";
-@import "./blocks/header.less";
-@import "./blocks/instagram.less";
-@import "./blocks/logo.less";
-@import "./blocks/media.less";
-@import "./blocks/menu.less";
-@import "./blocks/personal.less";
-@import "./blocks/productsProduct.less";
-@import "./blocks/smoothies.less";
-@import "./blocks/social.less";
-@import "./blocks/story.less";
-@import "./blocks/testimonials.less";
+@import "./blocks/_about.less";
+@import "./blocks/_blog.less";
+@import "./blocks/_btnButton.less";
+@import "./blocks/_footer.less";
+@import "./blocks/_header.less";
+@import "./blocks/_instagram.less";
+@import "./blocks/_logo.less";
+@import "./blocks/_media.less";
+@import "./blocks/_menu.less";
+@import "./blocks/_personal.less";
+@import "./blocks/_productsProduct.less";
+@import "./blocks/_smoothies.less";
+@import "./blocks/_social.less";
+@import "./blocks/_story.less";
+@import "./blocks/_testimonials.less";
+
 
 
 
