--- a/styles/less/blocks/_header.less
+++ b/styles/less/blocks/_header.less
@@ -2,7 +2,7 @@
 
 
 .header__img{
-    background-image: url(../assets/images/header-img.png);
+    background-image: url(../../assets/images/header-img.png);
     background-position: center;
     background-size: cover;
     height: 100vh;
