added some work with less

--- a/styles/less/blocks/_testimonials.less
+++ b/styles/less/blocks/_testimonials.less
@@ -22,14 +22,14 @@
     z-index: -1;
 }
 
-.testimonials__items::after{
+.testimonials__img::after{
     content:"";
     width: 410px;
     height: 300px;
     background-image: url(/assets/images/Dots-img.png);
     position: absolute;
-    top: -384px;
-    right: -560px;
+    left: 650px;
+    bottom: 310px;
 
 }
 
